--- a/source/style/utils/_mixins.css
+++ b/source/style/utils/_mixins.css
@@ -12,18 +12,18 @@
 @define-mixin container {
   width: 320px;
   margin: 0 auto;
-  max-width: 1300px; // для реализациии резиновой сетки
-  @media ($tablet-widths) {
+  max-width: 1300px;
+  @media (--tablet-widths) {
     width: 640px;
   }
-  @media ($desktop-widths) {
-    width: 960px;
+  @media (--desktop-widths) {
+    width: 1170px;
   }
 }
 
 @define-mixin container-fluid {
   width: auto;
-  @media ($tablet-widths) {
+  @media (--tablet-widths) {
     width: 84%;
     max-width: 960px;
     margin: 0 auto;
