--- a/source/style/utils/_variables.css
+++ b/source/style/utils/_variables.css
@@ -3,9 +3,10 @@
   --col: red;
 }
 
-$font: "Open Sans",
+$font: 'Open Sans',
 Arial,
 sans-serif;
-$mobile-widths-only: "max-width: 767px";
-$tablet-widths: "min-width: 768px";
-$desktop-widths: "min-width: 1200px";
+$color-red:#dc0000;
+@custom-media --mobile-widths-only (max-width: 767px);
+@custom-media --tablet-widths (min-width: 768px);
+@custom-media --desktop-widths (min-width: 1200px);
